--- a/pom.xml
+++ b/pom.xml
@@ -74,10 +74,16 @@
 		</dependency>
 
 
-		<dependency>
-		<groupId>com.fasterxml.jackson.core</groupId>
-		<artifactId>jackson-databind</artifactId>
-		</dependency>
+                <dependency>
+                        <groupId>com.fasterxml.jackson.core</groupId>
+                        <artifactId>jackson-databind</artifactId>
+                </dependency>
+
+                <dependency>
+                        <groupId>com.amazonaws.serverless</groupId>
+                        <artifactId>aws-serverless-java-container-springboot2</artifactId>
+                        <version>1.11.0</version>
+                </dependency>
 		
 
 	</dependencies>
