--- a/pom.xml
+++ b/pom.xml
@@ -73,17 +73,22 @@
 			<version>2.25.20</version> <!-- Use the same version as your other AWS SDKs -->
 		</dependency>
 
+		<dependency>
+			<groupId>com.amazonaws</groupId>
+			<artifactId>aws-lambda-java-core</artifactId>
+			<version>1.3.0</version>
+		</dependency>
 
-                <dependency>
-                        <groupId>com.fasterxml.jackson.core</groupId>
-                        <artifactId>jackson-databind</artifactId>
-                </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+        </dependency>
 
-                <dependency>
-                        <groupId>com.amazonaws.serverless</groupId>
-                        <artifactId>aws-serverless-java-container-springboot2</artifactId>
-                        <version>1.11.0</version>
-                </dependency>
+        <dependency>
+            <groupId>com.amazonaws.serverless</groupId>
+            <artifactId>aws-serverless-java-container-springboot3</artifactId>
+            <version>2.1.3</version>
+        </dependency>
 		
 
 	</dependencies>
